# super-agent-platform

./: .env.example  .gitignore  CLAUDE.md  CONTRIBUTING.md  Dockerfile  Dockerfile.prod  README-DEPLOY.md  README.md  alembic.ini  cloudbuild.deploy.yaml  docker-compose.prod.yml  docker-compose.yml  pyproject.toml  tmp_webhook_logs.out.txt
.github/workflows/: ci.yml  deploy.yml
adapters/branches/: __init__.py  sheets_adapter.py
adapters/crm/: monday_adapter.py
adapters/inventory/: __init__.py  sheets_adapter.py
adapters/knowledge/: pgvector_adapter.py
adapters/llm/: anthropic_adapter.py  openai_adapter.py  resilient_adapter.py  vertex_adapter.py  vertex_embedding_adapter.py  vertex_transcription_adapter.py
adapters/log/: gspread_log_adapter.py
adapters/media/: __init__.py  whatsapp_media_decryptor.py
adapters/storage/: db.py  models.py
adapters/transcription/: whisper_stub.py
api/: dependencies.py  main.py
api/middleware/: correlation.py
api/routers/: admin_panel.py  auth.py  campaigns.py  conversations.py  dashboard.py  knowledge.py  leads.py  webhook.py
brand/: brand.yaml  channels.yaml  crm_mapping.yaml  fallback_messages.yaml  fsm.yaml  funnel.yaml  outbound_templates.yaml  policies.yaml  products.yaml  prompt.md
core/: config.py
core/auth/: __init__.py  jwt_handler.py
core/brand/: loader.py  schema.py
core/domain/: action.py  agent_context.py  branch.py  classification.py  conversation_event.py  crm_outbox.py  intent.py  knowledge.py  lead.py  llm.py  messaging.py  outbound_queue.py  session.py  silenced_user.py  slots.py
core/fsm/: __init__.py  actions.py  engine.py  guards.py  schema.py  tool_policy.py
core/observability/: context.py  logging.py
core/ports/: admin_user_repository.py  branch_provider.py  conversation_log.py  crm_provider.py  inventory_provider.py  knowledge_provider.py  llm_provider.py  messaging_provider.py  repositories.py  transcription_provider.py
core/services/: admin_auth_service.py  audit_log_service.py  campaign_agent.py  campaign_worker.py  conversation_agent.py  conversation_summary.py  crm_worker.py  dashboard_service.py  document_chunker.py  friction_detector.py  handoff_service.py  image_analysis_service.py  inbound_handler.py  knowledge_ingestion_service.py  login_attempt_service.py  orchestrator.py  queue_worker.py  repetition_guard.py  replay_engine.py  responder.py  skills.py  slot_extractor.py
core/utils/: human_delay.py
docs/: ADMIN-ONBOARDING.md  PRUEBA-WHATSAPP.md
infra/: scheduler.py
infra/docker/: init-db.sql
infra/gcp/: README.md  deploy.sh  migrate.sh  setup.sh
infra/migrations/: env.py  run.sh
infra/nginx/: nginx.conf  nginx.dev.conf
infra/scripts/: backup-db.sh  deploy.sh  logs.sh  smoke-test.sh  ssl-init.sh
scripts/: create_admin.py  migrate_admin_user.py  new_brand.py  new_brand.sh  prod_table_check.py
tests/: conftest.py
tests/integration/: test_health.py
tests/replay/: test_replay_conversations.py
tests/unit/: test_advisor_alert.py  test_brand_config.py  test_brand_loader.py  test_conversation_agent_tool_filter.py  test_conversation_log_port.py  test_conversation_summary.py  test_crm_dlq_alert.py  test_debounce.py  test_friction_detector.py  test_guards.py  test_handoff_states.py  test_human_delay.py  test_human_silence.py  test_inbound_from_me.py  test_logging.py  test_monday_add_note.py  test_monday_column_mapping.py  test_monday_dedup.py  (+9 more)
(+115 files in other folders)
